Cambio de referencia en botton free download

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a href="https://wa.me/34555005500/?text=tu%20texto%20personalizado"    target="_blank">
+                <a href="https://wa.me/34555005500/?text=tu%20texto%20personalizado" >
                     <i class="fas fa-phone"></i> +569 94466920
             </a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -139,7 +139,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="#">
                         <i class="fas fa-download me-2"></i>
                         Free Download!
                     </a>
